files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momo-api-service
  namespace: momo
  labels:
    app: momo-api
spec:
  selector:
    app: momo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP   # use LoadBalancer or Ingress for external access
